--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex,nofollow" />
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" th:href="@{/vendors/css/normalize.css}" />
-    <link rel="stylesheet"
-          href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-    <link rel="stylesheet"
-          th:href="@{/vendors/css/jquery.dataTables.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/main.css}" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="robots" content="noindex,nofollow"/>
+  <meta charset="UTF-8"/>
+  <link rel="stylesheet" th:href="@{/vendors/css/normalize.css}"/>
+  <link rel="stylesheet"
+        href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+  <link rel="stylesheet"
+        th:href="@{/vendors/css/jquery.dataTables.min.css}"/>
+  <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
 <header>
+  <nav>
+    <div class="logo">
+      <a th:href="@{/}"><img th:src="@{/img/BananaLogo.png}" alt="Logo"/></a>
+    </div>
+    <ul>
 
+      <li sec:authorize="isAuthenticated()"><a th:href="@{/profile}">Mon profil</a></li>
+      <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts}">Mes comptes</a></li>
+      <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Login</a></li>
+      <li sec:authorize="!isAuthenticated()"><a th:href="@{/register}">S'inscrire</a></li>
+      <li sec:authorize="isAuthenticated()">
+        <form th:action="@{/logout}" method="post">
+          <input type="submit" value="Me déconnecter"/>
+        </form>
+      </li>
+
+      <li>
+        <button>
+          <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+            <path d="M20,4H4A2,2 0 0,0 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6A2,2 0 0,0 20,4M20,18H4V8L12,13L20,8V18M20,6L12,11L4,6V6H20V6Z"/>
+          </svg>
+        </button>
+      </li>
+      <li th:if="${#strings.isEmpty(picture)}">
+        <div class="profile-picture">
+          <img th:src="${picture}"/>
+        </div>
+      </li>
+    </ul>
+  </nav>
 </header>
 
 <section class="content">
-    <div layout:fragment="content"></div>
+  <div layout:fragment="content"></div>
 </section>
 
 <footer layout:fragment="footer">
-    Aurevoir
+  Aurevoir
 </footer>
 </body>
 </html>
