--- a/src/main/resources/templates/budget/form.html
+++ b/src/main/resources/templates/budget/form.html
@@ -7,7 +7,7 @@
 <body>
 <div layout:fragment="content" class="page-form">
   <h1 th:if="${account}">
-    Edition du compte <span th:text="${account.name}"></span>
+    Edition du compte
   </h1>
   <h1>Création d'un budget</h1>
   <div layout:fragment="budget-form"></div>
