--- a/src/main/resources/templates/budget/update-budget.html
+++ b/src/main/resources/templates/budget/update-budget.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="budget-form" class="page-form">
   <form th:action="@{/budgets/update}" method="POST">
-    <input type="hidden" name="accountId" th:value="${budget.account.id}" />
+    <input type="hidden" name="accountId" th:value="${account}" />
     <input type="hidden" name="budgetId" th:value="${budget.id}" />
     <div>
       <input type="text" name="startDate" placeholder="Date de début" id="start-date" th:value="${budget != null and budget.startDate != null ? #dates.format(budget.startDate, 'MM/yyyy') : ''}" />
