--- a/src/main/resources/templates/charge/create-charge.html
+++ b/src/main/resources/templates/charge/create-charge.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+      layout:decorator="charge/form">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Charge</title>
 </head>
 <body>
-$END$
+<div layout:fragment="charge-form" class="page-form">
+  <form th:action="@{/charges/create}" method="POST">
+    <input type="hidden" name="accountId" th:value="${chargeForm.accountId > 0 ? chargeForm.accountId : -1}" />
+    <div>
+      <input type="text" name="startDate" placeholder="Date de début" id="start-date" />
+    </div>
+    <div>
+      <input type="text" name="endDate" placeholder="Date de fin" id="end-date" />
+    </div>
+    <div>
+      <input type="text" name="description" placeholder="Description" />
+    </div>
+    <div>
+      <input type="text" name="amount" placeholder="Montant" />
+    </div>
+    <div>
+      <input type="submit" value="Create" />
+    </div>
+  </form>
+</div>
 </body>
 </html>
