--- a/src/main/resources/templates/charge/update-charge.html
+++ b/src/main/resources/templates/charge/update-charge.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+      layout:decorator="charge/form">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Charges</title>
 </head>
 <body>
-$END$
+<div layout:fragment="charge-form" class="page-form">
+  <form th:action="@{/charges/update}" method="POST">
+    <input type="hidden" name="accountId" th:value="${chargeForm.accountId}" />
+    <input type="hidden" name="chargeId" th:value="${chargeForm.id}" />
+    <div>
+      <input type="text" name="startDate" placeholder="Date de début" id="start-date" th:value="${chargeForm != null and chargeForm.startDate != null ? #dates.format(chargeForm.startDate, 'dd/MM/yyyy') : ''}" />
+    </div>
+    <div>
+      <input type="text" name="endDate" placeholder="Date de fin" id="end-date" th:value="${chargeForm != null and chargeForm.endDate != null ? #dates.format(chargeForm.endDate, 'dd/MM/yyyy') : ''}" />
+    </div>
+    <div>
+      <input type="text" name="description" placeholder="Description" th:value="${chargeForm != null ? chargeForm.description : ''}" />
+    </div>
+    <div>
+      <input type="text" name="amount" placeholder="Montant" th:value="${chargeForm != null ? chargeForm.amount : ''}" />
+    </div>
+    <div>
+      <input type="submit" value="Create" />
+    </div>
+  </form>
+</div>
 </body>
 </html>
