--- a/src/main/resources/templates/budget/update-budget.html
+++ b/src/main/resources/templates/budget/update-budget.html
@@ -10,7 +10,7 @@
 <div layout:fragment="budget-form" class="page-form">
   <form th:action="@{/budgets/update}" method="POST">
     <input type="hidden" name="accountId" th:value="${budgetForm.accountId}" />
-    <input type="hidden" name="budgetId" th:value="${budgetForm.id}" />
+    <input type="hidden" name="id" th:value="${budgetForm.id}" />
     <div>
       <input type="text" name="startDate" placeholder="Date de début" id="start-date" th:value="${budgetForm != null and budgetForm.startDate != null ? #dates.format(budgetForm.startDate, 'MM/yyyy') : ''}" />
     </div>
