--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,50 +6,71 @@
   <meta name="robots" content="noindex,nofollow"/>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" th:href="@{/vendors/css/normalize.css}"/>
-  <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>-->
-  <!--<link rel="stylesheet" th:href="@{/css/main.css}"/>-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" th:href="@{/vendors/css/materialize.css}"/>
+  <link rel="stylesheet" th:href="@{/css/dist/layout.min.css}"/>
   <script th:src="@{/vendors/javascript/modernizr.js}"></script>
 </head>
 <body>
 <header>
   <nav>
-    <div class="logo">
-      <a th:href="@{/}"><img th:src="@{/img/BananaLogo.png}" alt="Logo"/></a>
+    <div class="nav-wrapper">
+      <a th:href="@{/}" class="brand-logo"><img th:src="@{/images/BananaLogo.png}" alt="Logo"/></a>
+      <ul class="right hide-on-med-and-down">
+        <li>
+          <a href="#!user"><i class="material-icons">mail_outline</i></a>
+        </li>
+        <li><a href="#" data-activates="slide-out" class="button-collapse side-menu-button"><i class="material-icons">menu</i></a></li>
+      </ul>
     </div>
-    <ul>
-
-      <li sec:authorize="isAuthenticated()"><a th:href="@{/profile}">Mon profil</a></li>
-      <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts}">Mes comptes</a></li>
-      <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Login</a></li>
-      <li sec:authorize="!isAuthenticated()"><a th:href="@{/register}">S'inscrire</a></li>
-      <li sec:authorize="isAuthenticated()">
-        <form th:action="@{/logout}" method="post">
-          <input type="submit" value="Me déconnecter"/>
-        </form>
-      </li>
-
-      <li>
-        <button>
-          <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-            <path d="M20,4H4A2,2 0 0,0 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6A2,2 0 0,0 20,4M20,18H4V8L12,13L20,8V18M20,6L12,11L4,6V6H20V6Z"/>
-          </svg>
-        </button>
-      </li>
-      <li th:if="${#strings.isEmpty(picture)}">
-        <div class="profile-picture">
-          <img th:src="${picture}"/>
-        </div>
-      </li>
-    </ul>
   </nav>
 </header>
 
-<section class="content">
-  <div layout:fragment="content"></div>
+<section class="side-menu">
+  <ul id="slide-out" class="side-nav">
+    <li>
+      <div class="user-view">
+        <div class="background">
+          <img th:src="@{/images/BananaLogo.png}" alt="Logo"/>
+        </div>
+        <a href="#!name"><span class="white-text name"><span th:text="${user != null ? user.firstname : ''}"></span> <span th:text="${user != null ? user.lastname : ''}"></span></span></a>
+        <a href="#!email"><span class="white-text email"><span th:text="${user != null ? user.username : ''}"></span></span></a>
+      </div>
+    </li>
+    <li>
+      <div class="divider"></div>
+    </li>
+    <li sec:authorize="isAuthenticated()"><a th:href="@{/profile}" class="waves-effect">Mon profil</a></li>
+    <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Connexion</a></li>
+    <li sec:authorize="!isAuthenticated()"><a th:href="@{/register}">Inscription</a></li>
+    <li sec:authorize="isAuthenticated()">
+      <form th:action="@{/logout}" method="post">
+        <input class="button" type="submit" value="Déconnexion"/>
+      </form>
+    </li>
+    <li>
+      <div class="divider"></div>
+    </li>
+    <li><a class="subheader">Gestion de compte</a></li>
+    <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts}" class="waves-effect">Mes comptes</a></li>
+    <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts/create}" class="waves-effect">Créer un compte</a></li>
+    <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts}" class="waves-effect">Créer un budget</a></li>
+    <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts}" class="waves-effect">Ajouter une charge</a></li>
+    <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts}" class="waves-effect">Ajouter une dépense</a></li>
+    <li sec:authorize="isAuthenticated()"><a th:href="@{/accounts}" class="waves-effect">Ajouter un crédit</a></li>
+  </ul>
+</section>
+
+<section layout:fragment="content">
 </section>
 
 <footer layout:fragment="footer">
   Aurevoir
 </footer>
+
+<script th:src="@{/vendors/javascript/jquery-3.2.1.min.js}"></script>
+<script th:src="@{/vendors/javascript/materialize.min.js}"></script>
+<script th:src="@{/javascript/dist/layout.bundle.min.js}"></script>
+<div layout:fragment="scripts"></div>
 </body>
 </html>
