Some css on user pages

--- a/src/main/resources/static/sass/common/variables.scss
+++ b/src/main/resources/static/sass/common/variables.scss
@@ -12,3 +12,5 @@ $main-blue: #1976d2;
 $light-blue-1: #2196f3;
 $light-blue-2: #90caf9;
 $main-red: #f44336;
+$main-green: #4caf50;
+$dark-green-1: #43a047;
