--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -31,21 +31,19 @@
     <li>
       <div class="user-view">
         <div class="background">
-          <img th:src="@{/images/BananaLogo.png}" alt="Logo"/>
+          <img th:src="@{/images/sidemenuimgbackground.jpg}" alt="Logo"/>
         </div>
+        <a href="#!user"><img class="circle" th:src="@{/images/BananaLogo.png}" /></a>
         <a href="#!name"><span class="white-text name"><span th:text="${user != null ? user.firstname : ''}"></span> <span th:text="${user != null ? user.lastname : ''}"></span></span></a>
         <a href="#!email"><span class="white-text email"><span th:text="${user != null ? user.username : ''}"></span></span></a>
       </div>
-    </li>
-    <li>
-      <div class="divider"></div>
     </li>
     <li sec:authorize="isAuthenticated()"><a th:href="@{/profile}" class="waves-effect">Mon profil</a></li>
     <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Connexion</a></li>
     <li sec:authorize="!isAuthenticated()"><a th:href="@{/register}">Inscription</a></li>
     <li sec:authorize="isAuthenticated()">
       <form th:action="@{/logout}" method="post">
-        <input class="button" type="submit" value="Déconnexion"/>
+        <input class="waves-effect waves-light btn" type="submit" value="Déconnexion"/>
       </form>
     </li>
     <li>
@@ -64,8 +62,28 @@
 <section layout:fragment="content">
 </section>
 
-<footer layout:fragment="footer">
-  Aurevoir
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Banana</h5>
+        <p class="grey-text text-lighten-4">A simple bank account manager</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Liens utiles</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="#!">Comment utiliser</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Mentions légales</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Politique de cookies</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+      Developed by Cyril PHAM-LE
+    </div>
+  </div>
 </footer>
 
 <script th:src="@{/vendors/javascript/jquery-3.2.1.min.js}"></script>
