--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -4,31 +4,65 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       layout:decorator="layout">
 <head>
-    <title>Banana - Registration form</title>
+  <title>Inscription à Banana</title>
+  <link rel="stylesheet" th:href="@{/css/dist/user.min.css}"/>
 </head>
 <body>
-<div layout:fragment="content" class="page-registration">
-    <h1>Créer un compte Banana</h1>
-    <form th:action="@{/register}" method="POST" enctype="multipart/form-data">
-        <div>
-            <input type="text" name="lastname" placeholder="Votre nom" />
+<section layout:fragment="content">
+  <h1>Inscription</h1>
+
+  <div class="form-wrapper container">
+    <div class="col s10 offset-s1">
+      <form th:action="@{/register}" method="POST" enctype="multipart/form-data" class="col s12">
+        <div class="row">
+          <div class="input-field col s6">
+            <input type="text" id="lastname" name="lastname" />
+            <label for="lastname">Nom</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="text" id="firstname" name="firstname" />
+            <label for="firstname">Prénom</label>
+          </div>
         </div>
-        <div>
-            <input type="text" name="firstname" placeholder="Votre prénom" />
+
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="email" id="email" name="email" />
+            <label for="email">E-mail</label>
+          </div>
         </div>
-        <div>
-            <input type="email" name="email" placeholder="Votre e-mail" />
+
+        <div class="row">
+          <div class="input-field col s6">
+            <input type="password" id="password" name="password" />
+            <label for="password">Mot de passe</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="password" id="repeat-password" />
+            <label for="repeat-password">Répétez le mot de passe</label>
+          </div>
         </div>
-        <div>
-            <input type="password" name="password" placeholder="Votre mot de passe" />
+
+        <div class="row">
+          <div class="file-field input-field">
+            <div class="btn">
+              <span>Photo de profil</span>
+              <input type="file" name="picture"  />
+            </div>
+            <div class="file-path-wrapper">
+              <input class="file-path validate" type="text" />
+            </div>
+          </div>
         </div>
-        <div>
-            <label>Votre photo de profil :</label> <input type="file" name="picture" />
+
+        <div class="row">
+          <div class="col s2 offset-s5">
+            <input class="waves-effect waves-light btn" type="submit" value="Valider" />
+          </div>
         </div>
-        <div class="submit-wrapper">
-            <input type="submit" value="S'enregistrer" />
-        </div>
-    </form>
-</div>
+      </form>
+    </div>
+  </div>
+</section>
 </body>
 </html>
