--- a/src/main/resources/templates/budget/create-budget.html
+++ b/src/main/resources/templates/budget/create-budget.html
@@ -2,30 +2,47 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-      layout:decorator="budget/form">
+      layout:decorator="layout">
 <head>
   <title>Crédit</title>
 </head>
 <body>
-<div layout:fragment="budget-form" class="page-form">
-  <form th:action="@{/budgets/create}" method="POST">
-    <input type="hidden" name="accountId" th:value="${budgetForm.accountId}" />
-    <div>
-      <input type="text" name="startDate" placeholder="Date de début" id="start-date" />
+<section layout:fragment="content" class="creation-form">
+  <h1>Ajout d'un budget</h1>
+
+  <div class="form-wrapper container">
+    <div class="col s10 offset-s1">
+      <form th:action="@{/budgets/create}" method="POST" class="col s12">
+        <input type="hidden" name="accountId" th:value="${budgetForm.accountId}" />
+        <div class="row">
+          <div class="input-field col s6">
+            <input type="date" name="startDate" id="start-date" />
+            <label for="start-date">Date de prise en compte</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="date" name="endDate" id="end-date" />
+            <label for="end-date">Date d'arrêt</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s6">
+            <input type="text" name="name" id="name" />
+            <label for="name">Nom du budget</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="text" name="initialAmount" id="initialAmount" />
+            <label for="initialAmount">Montnat initial</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s2 offset-s5">
+            <input class="waves-effect waves-light btn" type="submit" value="Valider"/>
+          </div>
+        </div>
+      </form>
     </div>
-    <div>
-      <input type="text" name="endDate" placeholder="Date de fin" id="end-date" />
-    </div>
-    <div>
-      <input type="text" name="name" placeholder="Nom" />
-    </div>
-    <div>
-      <input type="text" name="initialAmount" placeholder="Montant" />
-    </div>
-    <div>
-      <input type="submit" value="Create" />
-    </div>
-  </form>
-</div>
+  </div>
+</section>
 </body>
 </html>
