--- a/src/main/resources/templates/charge/create-charge.html
+++ b/src/main/resources/templates/charge/create-charge.html
@@ -2,30 +2,47 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-      layout:decorator="charge/form">
+      layout:decorator="layout">
 <head>
   <title>Charge</title>
 </head>
 <body>
-<div layout:fragment="charge-form" class="page-form">
-  <form th:action="@{/charges/create}" method="POST">
-    <input type="hidden" name="accountId" th:value="${chargeForm.accountId > 0 ? chargeForm.accountId : -1}" />
-    <div>
-      <input type="text" name="startDate" placeholder="Date de début" id="start-date" />
+<section layout:fragment="content" class="creation-form">
+  <h1>Création de charge</h1>
+
+  <div class="form-wrapper container">
+    <div class="col s10 offset-s1">
+      <form th:action="@{/accounts/create}" method="POST" class="col s12">
+        <input type="hidden" name="accountId" th:value="${chargeForm.accountId > 0 ? chargeForm.accountId : -1}" />
+        <div class="row">
+          <div class="input-field col s6">
+            <input type="date" name="startDate" id="start-date" />
+            <label for="start-date">Nom du compte</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="date" name="endDate" id="end-date" />
+            <label for="end-date">Nom du compte</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s6">
+            <input type="text" name="description" id="description" />
+            <label for="description">Description</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="text" name="amount" id="amount" />
+            <label for="amount">Montant</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s2 offset-s5">
+            <input class="waves-effect waves-light btn" type="submit" value="Valider"/>
+          </div>
+        </div>
+      </form>
     </div>
-    <div>
-      <input type="text" name="endDate" placeholder="Date de fin" id="end-date" />
-    </div>
-    <div>
-      <input type="text" name="description" placeholder="Description" />
-    </div>
-    <div>
-      <input type="text" name="amount" placeholder="Montant" />
-    </div>
-    <div>
-      <input type="submit" value="Create" />
-    </div>
-  </form>
-</div>
+  </div>
+</section>
 </body>
 </html>
