Test controllers routes

--- a/src/main/resources/templates/budget/form-create.html
+++ b/src/main/resources/templates/budget/form-create.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       layout:decorator="layout">
 <head>
-  <title>Crédit</title>
+  <title>Banana - Création de budget</title>
 </head>
 <body>
 <section layout:fragment="content" class="creation-form">
