--- a/src/main/resources/templates/charge/form-create.html
+++ b/src/main/resources/templates/charge/form-create.html
@@ -4,29 +4,34 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       layout:decorator="layout">
 <head>
-  <title>Account creation</title>
+  <title>Banana - Création de charge</title>
 </head>
 <body>
 <section layout:fragment="content" class="creation-form">
-  <h1>Création de compte</h1>
+  <h1>Création de charge</h1>
 
   <div class="form-wrapper container">
     <div class="col s10 offset-s1">
-      <form th:action="@{/accounts/create}" method="POST" class="col s12">
+      <form th:action="@{/charges/create}" method="POST" class="col s12">
+        <input type="hidden" name="accountId" th:value="${chargeForm.accountId > 0 ? chargeForm.accountId : -1}" />
         <div class="row">
-          <div class="input-field col s12">
-            <input type="text" id="name" name="name" />
-            <label for="name">Nom du compte</label>
+          <div class="input-field col s6">
+            <input type="date" name="startDate" id="start-date" />
+            <label for="start-date">Nom du compte</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="date" name="endDate" id="end-date" />
+            <label for="end-date">Nom du compte</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s6">
-            <input type="text" id="initialAmount" name="initialAmount" />
-            <label for="initialAmount">Montant initial</label>
+            <input type="text" name="description" id="description" />
+            <label for="description">Description</label>
           </div>
           <div class="input-field col s6">
-            <input type="date" name="startDate" id="start-date" />
-            <label for="start-date">Date de prise en compte</label>
+            <input type="text" name="amount" id="amount" />
+            <label for="amount">Montant</label>
           </div>
         </div>
 
