--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,8 @@
   <meta charset="UTF-8"/>
   <link rel="stylesheet" th:href="@{/vendors/css/normalize.css}"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" th:href="@{/vendors/css/materialize.css}"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css"/>
+  <!--<link rel="stylesheet" th:href="@{/vendors/css/materialize.css}"/>-->
   <link rel="stylesheet" th:href="@{/css/dist/layout.min.css}"/>
   <script th:src="@{/vendors/javascript/modernizr.js}"></script>
 </head>
@@ -87,7 +88,8 @@
 </footer>
 
 <script th:src="@{/vendors/javascript/jquery-3.2.1.min.js}"></script>
-<script th:src="@{/vendors/javascript/materialize.min.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+<!--<script th:src="@{/vendors/javascript/materialize.min.js}"></script>-->
 <script th:src="@{/javascript/dist/layout.bundle.min.js}"></script>
 <div layout:fragment="scripts"></div>
 </body>
