--- a/src/main/resources/templates/account/account.html
+++ b/src/main/resources/templates/account/account.html
@@ -6,26 +6,107 @@
   <link rel="stylesheet" th:href="@{/css/dist/account.min.css}"/>
 </head>
 <body>
+
 <section layout:fragment="content" class="page-account">
   <h1>
     <span th:text="${accountSlug}"></span>
   </h1>
-  <div class="switch-button">
-    <button id="button-all-account">Tout voir</button>
-    <button id="button-budgets">Budgets</button>
-    <button id="button-charges">Charges</button>
-    <button id="button-expenses">Dépenses</button>
-    <button id="button-credits">Crédits</button>
+
+  <div class="switch-button container">
+    <div class="row">
+      <div class="col s1"><button id="previous-month" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">keyboard_arrow_left</i></button></div>
+      <div class="col s2"><button id="button-allaccount" class="waves-effect waves-light btn">Tout voir</button></div>
+      <div class="col s2"><button id="button-budgets" class="waves-effect waves-light btn">Budgets</button></div>
+      <div class="col s2"><button id="button-charges" class="waves-effect waves-light btn">Charges</button></div>
+      <div class="col s2"><button id="button-expenses" class="waves-effect waves-light btn">Dépenses</button></div>
+      <div class="col s2"><button id="button-credits" class="waves-effect waves-light btn">Crédits</button></div>
+      <div class="col s1"><button id="next-month" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">chevron_right</i></button></div>
+    </div>
   </div>
+
+  <div class="amounts-wrapper container">
+    <div class="row">
+      <div class="col s4">Montant initial : <span id="account-initial-amount"></span></div>
+      <div class="col s4">Montant libre : <span id="account-free-amount"></span></div>
+      <div class="col s4">Montant actuel : <span id="account-current-amount"></span></div>
+    </div>
+  </div>
+
   <div class="account-infos-wrapper">
-    <div class="all-account-content"></div>
-    <div class="budgets-content"></div>
-    <div class="charges-content"></div>
-    <div class="expenses-content"></div>
-    <div class="credits-content"></div>
+    <div class="allaccount-content">
+      <table id="all-account-table" class="striped centered tablesorter">
+        <thead>
+        <tr>
+          <th>Date dépense</th>
+          <th>Date débit</th>
+          <th>Type</th>
+          <th>Description</th>
+          <th>Montant</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+
+    <div id="budgets-container" class="budgets-content">
+    </div>
+
+    <div class="charges-content">
+      <table id="charge-table" class="striped centered tablesorter">
+        <thead>
+        <tr>
+          <th>Date débit</th>
+          <th>Description</th>
+          <th>Montant</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="expenses-content">
+      <table id="expenses-table" class="striped centered tablesorter">
+        <thead>
+        <tr>
+          <th>Date dépense</th>
+          <th>Date débit</th>
+          <th>Description</th>
+          <th>Montant</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="credits-content">
+      <table id="credits-table" class="striped centered tablesorter">
+        <thead>
+        <tr>
+          <th>Date de crédit</th>
+          <th>Description</th>
+          <th>Montant</th>
+          <th>Actions</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </div>
 </section>
+
 <div layout:fragment="scripts">
+  <script th:src="@{/vendors/javascript/jquery.tablesorter.min.js}"></script>
   <script th:src="@{/javascript/dist/account.bundle.min.js}"></script>
 </div>
 </body>
