--- a/src/main/resources/templates/budget/form-create.html
+++ b/src/main/resources/templates/budget/form-create.html
@@ -44,5 +44,9 @@
     </div>
   </div>
 </section>
+
+<div layout:fragment="scripts">
+  <script th:src="@{/javascript/dist/create-page.bundle.min.js}"></script>
+</div>
 </body>
 </html>
