--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -4,18 +4,32 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       layout:decorator="layout">
 <head>
-    <title>Profil utilisateur</title>
+  <title>Profil utilisateur</title>
 </head>
 <body>
-<div layout:fragment="content" class="page-profile">
-    <div class="profile-infos">
-        <div><b>Nom :</b> <span th:text="${user.lastname}"></span></div>
-        <div><b>Prénom :</b> <span th:text="${user.firstname}"></span></div>
-        <div><b>E-mail :</b> <span th:text="${user.email}"></span></div>
+<section layout:fragment="content" class="page-profile">
+  <h1>Profil de <span th:text="${user.firstname}"></span> <span th:text="${user.lastname}"></span></h1>
+
+  <div class="profile-wrapper container">
+    <div class="row">
+      <div class="col s6">
+        <div class="row">
+          <b>Nom :</b> <span th:text="${user.lastname}"></span>
+        </div>
+        <div class="row">
+          <b>Prénom :</b> <span th:text="${user.firstname}"></span>
+        </div>
+        <div class="row">
+          <b>E-mail :</b> <span th:text="${user.email}"></span>
+        </div>
+      </div>
+      <div class="col s6">
+        <div class="row">
+          <img th:src="${picture}"/>
+        </div>
+      </div>
     </div>
-    <div class="profile-picture">
-        <img th:src="${picture}"/>
-    </div>
-</div>
+  </div>
+</section>
 </body>
 </html>
