--- a/src/main/resources/templates/credit/form-update.html
+++ b/src/main/resources/templates/credit/form-update.html
@@ -41,5 +41,9 @@
     </div>
   </div>
 </section>
+
+<div layout:fragment="scripts">
+  <script th:src="@{/javascript/dist/update-page.bundle.min.js}"></script>
+</div>
 </body>
 </html>
