--- a/src/main/resources/templates/expense/form-create.html
+++ b/src/main/resources/templates/expense/form-create.html
@@ -45,5 +45,9 @@
     </div>
   </div>
 </section>
+
+<div layout:fragment="scripts">
+  <script th:src="@{/javascript/dist/create-expense-page.bundle.min.js}"></script>
+</div>
 </body>
 </html>
