--- a/src/main/resources/templates/expense/form-update.html
+++ b/src/main/resources/templates/expense/form-update.html
@@ -46,5 +46,9 @@
     </div>
   </div>
 </section>
+
+<div layout:fragment="scripts">
+  <script th:src="@{/javascript/dist/update-expense-page.bundle.min.js}"></script>
+</div>
 </body>
 </html>
